--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
       <section>  
         <h2>Список друзів</h2>
         <ul>
-        <li>Кіра</li>
-        <li>Тимур</li>
-        <li>Задорожня Ірка</li>
-        <li>Nikita Teltgin</li>
+        <li><a href="https://Kiraa55.github.io/Kira">Кіра</a></li>
+        <li<a href="nikita-ukma.github.io/timon">Тимур</a></li>
+        <li><a href="Stinkywinky52.github.io/-52/">Задорожня Ірка</a></li>
+        <li><a href="nikita-ukma.github.io/Nikita_tieliehin/">Nikita Teltgin</a></li>
         </ul>
      </section>
      <section>
